2023-04-21 `v0.1.2` - 一部環境でダウンロード画像が正常に描画されないバグを修正(`style.css`)     - たぶんhtml2canvasがinheritが来たときに渡された要素の親の計算値を読めてない         - そもそもinheritを参照する事態にならないように修正     - そしてbox-shadowの描画も不安定？         - box-shadow一応削除しておいた

--- a/style.css
+++ b/style.css
@@ -144,8 +144,6 @@ section.pre {
     width: 800px;
     background: white;
     padding: 0.5rem;
-    border-radius: 0.5rem;
-    box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.7);
 }
 
 section.pre * {
@@ -165,11 +163,13 @@ section.pre>h2 {
     border-color: #224;
     border-left: 0.5rem solid;
     border-bottom: 0.125rem solid;
+    background: white;
 }
 
 section.pre>div {
     display: flex;
     gap: 1rem;
+    background: white;
 }
 
 section.pre>div>* {
