2023-05-12 `v0.2.1` - 画像サイズが極端に縦長/横長な場合において画像が引き伸ばされた状態で描画される不具合の修正     - 画像に対して`object-fit: contain;`を追加しただけ。完全に忘れてました……

--- a/style.css
+++ b/style.css
@@ -188,7 +188,7 @@ section.pre>h2 {
     background: white;
 }
 
-section.pre>div{
+section.pre>div {
     background: white;
 }
 
@@ -199,6 +199,7 @@ section.pre>div:has(+table>tbody) {
 
 section.pre>div:has(+table>tbody)>* {
     width: calc(50% - 0.5rem);
+    object-fit: contain;
 }
 
 section.pre>div>img {
