2023-05-12 `v0.2.2` - 著作権表記をページ上に追加(追加忘れてた) - バージョン表記をページ上に追加(追加忘れてた)

--- a/style.css
+++ b/style.css
@@ -68,6 +68,14 @@ article>*+* {
     margin-top: 1rem;
 }
 
+p:is(.version, .credit) {
+    text-align: center;
+}
+
+p.credit {
+    margin-top: 0.125rem;
+}
+
 /*==============================================================
     入力部分
 ==============================================================*/
