2023-05-12 `v0.2.4` - 画像サイズが極端に縦長な場合において画像が場所をとってしまう問題を修正     - `v0.2.1`でできてると思ったらできてなかった

--- a/style.css
+++ b/style.css
@@ -208,6 +208,8 @@ section.pre>div:has(+table>tbody) {
 section.pre>div:has(+table>tbody)>* {
     width: calc(50% - 0.5rem);
     object-fit: contain;
+    max-height: 24rem;
+    margin: auto;
 }
 
 section.pre>div>img {
